--- a/1/index.html
+++ b/1/index.html
@@ -14,5 +14,10 @@
   <img
     src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcanoeracing.org.uk%2Fmarathon%2Fthe-legend-of-zelda-ocarina-of-time-ww-34415564&psig=AOvVaw1AJ4I5JAoW57ajW7mAp5uZ&ust=1705532926637000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIjP7LeD44MDFQAAAAAdAAAAABAI"
     alt="TLOZ"> 
+
+    <p>Podría enlistar mis juegos favoritos, los cuales serían: </p> 
+    <li>Twilight Princess</li>
+    <li>Ocarina Of Time</li>
+    <li>Majora´s Mask</li>
   </body>
 </html>
