--- a/1/index.html
+++ b/1/index.html
@@ -12,12 +12,19 @@
       cercano, lo que despertó mi gusto por la tecnología. En particular, me enamoré de la saga de videojuegos "The Legend
       of Zelda". La primera vez que lo jugué fue en un Nintendo 64 que pertenecía a mi tia.</p> 
   <img
-    src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcanoeracing.org.uk%2Fmarathon%2Fthe-legend-of-zelda-ocarina-of-time-ww-34415564&psig=AOvVaw1AJ4I5JAoW57ajW7mAp5uZ&ust=1705532926637000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIjP7LeD44MDFQAAAAAdAAAAABAI"
-    alt="TLOZ"> 
-
-    <p>Podría enlistar mis juegos favoritos, los cuales serían: </p> 
+    src="https://media.vandal.net/m/2129/the-legend-of-zelda-ocarina-of-time-201982611564412_1.jpg"
+    alt="TLOZ" /> 
+<h2>Datos Extra</h2>
+    <ul>Mis padres se llaman Amanda Bello y Miguel Salas </ul>
+    <ul>Mi mamá tiene 42 y mi papá tiene 44</ul>
+    
+    <p>También podría enlistar mis juegos favoritos, los cuales serían: </p> 
     <li>Twilight Princess</li>
     <li>Ocarina Of Time</li>
     <li>Majora´s Mask</li>
+
+<h3>The Legend Of Zelda</h3>
+<p> A continuación, este es un link que lleva a la página oficial del videojuego:</p>
+<a href="https://zelda.nintendo.com/">Página Oficial</a>
   </body>
 </html>
