--- a/1/index.html
+++ b/1/index.html
@@ -23,7 +23,7 @@
     <li>Ocarina Of Time</li>
     <li>Majora´s Mask</li>
 
-<h3>The Legend Of Zelda</h3>
+<h3>Informacion acerda de The Legend Of Zelda</h3>
 <p> A continuación, este es un link que lleva a la página oficial del videojuego:</p>
 <a href="https://zelda.nintendo.com/">Página Oficial</a>
   </body>
